--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,12 @@
     margin: 0 auto;
     padding-top: 10px;
 }
+
+.card {
+	font-family: "Open Sans", san-serif;
+    color: #fefefe;
+	background-size: cover;
+}
 .size1 {
     width: 50%;
     height: 516px;
@@ -19,14 +25,19 @@
     width: 50%;
     height: 258px;
 }
-.card {
-	font-family: "Open Sans", san-serif;
-    color: #fefefe;
-	background-size: cover;
+.content {
     position: relative;
 }
+.size1 .content {
+    height: 417px;
+    margin: 60px 68px 38px 67px;
+}
+.size2 .content {
+    height: 200px;
+    margin: 33px 68px 24px 67px;
+}
 .child_card {
-    background-image: url("..//images/child_card.jpg");
+    background-image: url("..//images/child_card.png");
 }
 .child_card .card_name {
     background-color: #058cff;
@@ -44,7 +55,7 @@
     background-color: #02828f;
 }
 .aqua_yoga {
-    background-image: url("..//images/yoga3.jpg");
+    background-image: url("..//images/yoga3_cut.png");
     color: #5e6a75;
 }
 .aqua_yoga .card_name {
@@ -54,12 +65,6 @@
 /*info*/
 .info {
 	width: 360px;
-    height: 415px;
-    margin-left: 66px;
-    padding-top: 60px;
-}
-.size2 .info {
-    padding-top: 30px;
 }
 .card_name {
 	font-size: 18px;
@@ -101,6 +106,7 @@ h2 span {
     padding-right: 126px;
 }
 .size2 .card_description {
+    margin-top: 10px;
     padding-right: 66px;
 }
 
@@ -109,8 +115,8 @@ h2 span {
     width: 119px;
     height: 52px;
     position: absolute;
-    top: 59px;
-    right: 88px;
+    top: 0px;
+    right: 21px;
     /*for gradient border around the button*/
     background: linear-gradient(#489fdb, #5f84be);
     padding: 1px;
@@ -168,8 +174,8 @@ h2 span {
     height: 32px;
     background: #f5c600;
     position: absolute;
-    bottom: 39px;
-    right: 67px;
+    bottom: 0px;
+    right: 0px;
     text-align: center;
     border-radius: 4px;
 }
