--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,18 @@
 	font-family: "Open Sans", san-serif;
     color: #fefefe;
 	background-size: cover;
+    position: relative;
+    z-index: 2;
+}
+.card::before {
+    width: 100%;
+    height: 100%;
+    display: block;
+    content: " ";
+    opacity: 0.5;
+    position: absolute;
+    top: 0px;
+    z-index: 4;
 }
 .size1 {
     width: 50%;
@@ -27,6 +39,7 @@
 }
 .content {
     position: relative;
+    z-index: 8;
 }
 .size1 .content {
     height: 417px;
@@ -37,34 +50,35 @@
     margin: 33px 68px 24px 67px;
 }
 .child_card {
-    background-image: url("..//images/child_card.png");
+    background-image: url("..//images/child_card.jpg");
 }
-.child_card .card_name {
+.child_card .card_name, .child_card.card::before {
     background-color: #058cff;
 }
 .basic_sport {
     background-image: url("..//images/ball1_1.png");
 }
-.basic_sport .card_name {
+.basic_sport .card_name,  .basic_sport.card::before {
     background-color: #db28b3;
 }
 .full_immertion {
     background-image: url("..//images/full_immertion.jpg");
 }
-.full_immertion .card_name {
+.full_immertion .card_name,  .full_immertion.card::before {
     background-color: #02828f;
 }
 .aqua_yoga {
     background-image: url("..//images/yoga3_cut.png");
     color: #5e6a75;
 }
-.aqua_yoga .card_name {
+.aqua_yoga .card_name,  .aqua_yoga.card::before {
     background-color: #ffffff;
 }
 
 /*info*/
 .info {
 	width: 360px;
+
 }
 .card_name {
 	font-size: 18px;
@@ -129,7 +143,7 @@ h2 span {
 	border: none;
 	border-radius: 6px;
 	position: relative;
-	z-index: 3;
+	z-index: 23;
 }
 .card_buy::after {
 	width: 40px;
@@ -143,7 +157,7 @@ h2 span {
     transform: rotate(45deg);
     top: 6px;
     right: -15px;
-    z-index: 1;
+    z-index: 15;
 }
 .card_buy button::after {
 	width: 38px;
@@ -156,7 +170,7 @@ h2 span {
     transform: rotate(45deg);
     top: 6px;
     right: -15px;
-    z-index: 2;
+    z-index: 20;
 }
 .card_buy button span {
 	padding-left: 15px;
@@ -165,7 +179,7 @@ h2 span {
 	text-transform: uppercase;
 	color: #ffffff;
 	position: relative;
-	z-index: 5;
+	z-index: 25;
 }
 
 /*price*/
@@ -173,11 +187,12 @@ h2 span {
 	width: 108px;
     height: 32px;
     background: #f5c600;
+    text-align: center;
+    border-radius: 4px;
     position: absolute;
     bottom: 0px;
     right: 0px;
-    text-align: center;
-    border-radius: 4px;
+    z-index: 5;
 }
 .card_price span {
 	font-weight: 700;
