--- a/styles/main.css
+++ b/styles/main.css
@@ -48,8 +48,6 @@ h2 {
     margin: 0 auto;
     color: #fefefe;
     font-family: "Open Sans", san-serif;
-
-                        border: solid 2px red;
 }
 
 header {
@@ -119,6 +117,9 @@ header {
     width: 50%;
     height: 258px;
 }
+.size3 {
+    width: 28%;
+}
 .card_content {
     position: relative;
     z-index: 8;
@@ -163,19 +164,22 @@ header {
 .info {
     width: 360px;
 }
+
 .card_name {
     font-size: 18px;
-    /*text-transform: uppercase;*/
     font-weight: 700;
     line-height: 1.8;
     letter-spacing: -1.8px;
     word-spacing: 9px;
-    width: 178px;
-    height: 31px;
-    padding-left: 12px;    
+    text-align: center;
+    height: 31px;    
     border-radius: 4px;
+    display: inline-flex;
 }
-.card_name span {
+.card_name>span {
+    padding: 0 12px 0 12px;
+}
+.card_name .lett_spase0 {
     letter-spacing: 0;
 }
 
@@ -264,8 +268,6 @@ header {
     background-image: url("..//images/motivation_fon1.jpg");
     background-size: cover;
     padding-top: 65px;
-/*
-                        border: solid 1px green;*/
 }           
 .motiv_info {
     width: 680px;
@@ -299,6 +301,96 @@ header {
 
 /*SECTION TIMETABLE */
 
-.timetable h2 {
-    color: #99a0a8;    
+.timetable>h2 {
+    color: #99a0a8;  
+    text-align: center;  
+    margin: 52px 0 45px 0;
+}
+.timetable_for_card {
+    display: flex;
+}
+.timetable_for_card h2 {
+    font-size: 13px;
+    margin: 10px 0px 0 5px;
+}
+.timetable_for_card .card {
+    margin-bottom: 1px;
+}
+.timetable .card_content {
+    margin: 33px 0px 0 74px;
+    width: 250px;
+}
+.timetable .card_name {
+    height: 28px;
+    border-radius: 4px;
+    text-align: center;
+}
+.timetable .card_name>span {
+    font-size: 13px;
+    padding: 3px 14px 0 15px;
+}
+.timetable .card_content h2 {
+    font-size: 24px;
+    padding: 3px 0px 0 9px;
+    letter-spacing: -1px;
+}
+
+.coach_time {
+    width: 72%;
+    border-top: solid 1px #e5e5e5;
+    position: relative;
+}
+
+.coach_time .time, .coach_time .coach {
+    display: flex;   
+}
+.coach_time .coach {
+    min-height: 84px;
+}
+.coach_time .hour, .coach_time .coaches {
+    box-sizing: padding-box;
+    width: 80px;
+    border-right: solid 1px #e5e5e5;
+    border-top: solid 1px #f1f1f1;
+}
+.coach_time .hour {
+    text-align: center;
+    height: 60px;
+    background-color: #eeeeee;
+    border-right: solid 1px #e5e5e5;
+    border-top: solid 1px #f1f1f1;
+}
+.coach_time .coaches {
+    background-color: #ffffff;
+}
+.coach_time .hour:first-child, .coach_time .coaches:first-child {
+    border-left: solid 1px #f1f1f1;
+}
+.coach_time .hour:last-child, .coach_time .coaches:last-child {
+    border-right: 0;
+}
+.coach_time .from, .coach_time .to {
+    color: #c6c6c6;
+}
+.coach_time .from {
+    font-size: 16px;
+    margin-bottom: 0px;
+}
+.coach_time .to {
+    font-size: 10px;
+    margin-top: 5px
+}
+.coaches_timing {
+    position: relative;
+}
+.coach_timing {
+    position: absolute;
+    bottom: 21px;
+    right: 143px;
+    height: 41px;
+    width: 708px;
+    padding: 12px 0 0 18px;
+}
+.coach_timing span {
+    letter-spacing: 1.6px;
 }
