--- a/styles/main.css
+++ b/styles/main.css
@@ -381,16 +381,30 @@ header {
     margin-top: 5px
 }
 .coaches_timing {
-    position: relative;
+    /*position: relative;*/
 }
 .coach_timing {
-    position: absolute;
-    bottom: 21px;
-    right: 143px;
     height: 41px;
-    width: 708px;
     padding: 12px 0 0 18px;
 }
 .coach_timing span {
     letter-spacing: 1.6px;
+}
+.coach_id_1 {
+    position: absolute;
+    bottom: 21px;
+    left: 71px;
+    width: 708px;
+}
+.coach_id_2 {
+    position: absolute;
+    bottom: 21px;
+    left: 71px;
+    width: 425px;
+}
+.coach_id_3 {
+    position: absolute;
+    bottom: 21px;
+    left: 71px;
+    width: 425px;
 }
