--- a/styles/main.css
+++ b/styles/main.css
@@ -3,127 +3,269 @@
 * {
     box-sizing: border-box;
 }
+body {
+    font-size: 10px;
+}
 
-header a { 
-    text-decoration: none;
-}
-h2 {
-    font-size: 42px;
-    font-weight: 400;
-    letter-spacing: -3.2px;
-    line-height: 1.2;
-}
 .text_upper {
     text-transform: uppercase;
 }
+.dark_text {
+    color: #5e6a75;
+}
 .btn {
-    height: 52px;
-    position: absolute;
-    /*for gradient border around the button*/
-    background: linear-gradient(#489fdb, #5f84be);
-    padding: 1px;
-    border-radius: 7px;
-}
-.btn img {
-    height: 30px;
-}
-.btn button {
-    width: 100%;
     height: 100%;
+    width: 100%;
+    padding: 0;
+    box-sizing: border-box;
     background: linear-gradient(#3bb1e0, #3a85bd);
-    border: none;
-    border-radius: 6px;
-    position: relative;
-    z-index: 230;
+    border-radius: 4px;
+    border: 1px solid #249fdb;
 }
-.btn button span {
+.btn span {
     font-family: "Open Sans", sans-serif;
-    font-size: 18px;
+    font-size: 1.1rem;
     color: #ffffff;
-    position: relative;
-    z-index: 250;
-}
-.btn.buy button span::before {
-    display: inline-block;
-    content: url(../images/shopping-cart.svg);
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    left: -8px;
-    top: 2px;
+    margin-left: 1.5rem;
+    position:relative;
+    z-index: 300;
 }
 
+
 .wrapper {
-    width: 1280px;
+    width: 98vw;
     margin: 0 auto;
     color: #fefefe;
     font-family: "Open Sans", sans-serif;
 }
 
-header {
-    height: 79px;
-    width: 100%;
-}
-.content {
+/*------HEADER------*/
+.header {
+    padding: 0 5.16vw 0 7vw ;
     background-color: #ffffff;
     display: flex;
     justify-content: space-between;
-    height: 100%;
-    width: 1126px;
-    margin-left: 88px;
 }
-
-.menu {
+.header__logo-link { 
+    text-decoration: none;
+}
+.header__logo-link img {
+    width: 23.44vw;
+}
+.header__menu {
     display: flex; /*for  а -- height=100%*/
     justify-content: space-between;
-    width: 680px;
+    width: 52.94vw;
 }
-.menu a {
+.header__menu-link {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 100%;
+    margin: 0;
+    padding: 0;
     color: #aab1b5;
     font-family: "Open Sans", sans-serif;
-    letter-spacing: -1px;
+    font-size: 0.9rem;
+    text-decoration: none;
     border-bottom: solid 4px rgba(252, 214, 51, 0);
 }
-.menu a:hover {
+.header__menu-link:hover {
     color: #858888;
     border-bottom: solid 4px rgba(252, 214, 51, 1);
 }
 
-.all_cards {
+/*----CARDS-----*/
+.cards {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    align-items: stretch;
 }
 
-.card {
+.cards__item {
+    width: 50%;
+    min-height: 19.7vw;
     font-family: "Open Sans", sans-serif;
     color: #fefefe;
     background-size: cover;
     position: relative;
-    z-index: 20;
+    background-position: center;
 }
-/*background darkening of card */
-.card::before {
-    width: 100%;
-    height: 100%;
+.cards__item::before {
     display: block;
     content: " ";
-    opacity: 0.5;
+    height: 100%;
+    width: 100%;
     position: absolute;
-    top: 0px;
-    z-index: 40;
+    top: 0;
+    left: 0;
+    opacity: 0.5;
 }
-.size1 {
-    width: 50%;
-    height: 516px;
+.child_card {
+    background-image: url("../images/child_card.jpg");
 }
-.size2 {
-    width: 50%;
-    height: 258px;
+.child_card .cards__item-name, .cards__item.child_card::before {
+    background-color: #058cff;
 }
+.basic_sport {
+    background-image: url("../images/ball1.jpg");
+}
+.basic_sport .cards__item-name, .cards__item.basic_sport::before {
+    background-color: #db28b3;
+}
+.full_immertion {
+    background-image: url("../images/full_immertion.jpg");
+}
+.full_immertion .cards__item-name,  .cards__item.full_immertion::before {
+    background-color: #02828f;
+}
+.aqua_yoga {
+    background-image: url("../images/yoga3_cut.png");
+}
+.aqua_yoga .cards__item-name,  .cards__item.aqua_yoga::before {
+    background-color: #ffffff;
+}
+
+.cards__item-content {
+    position: relative;
+    height: 100%;
+}
+.cards__item-info {    
+    padding: 2.28vw 16.5vw 1.88vw 5.23vw;
+}
+.cards__item-name {
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.7;
+    letter-spacing: -0.02rem;
+    word-spacing: 0.7rem;
+    text-align: center;
+    padding: 0.1rem  0.8rem;
+    border-radius: 0.4rem;
+    display: inline-flex;
+}
+.cards__item-name .lett_spase0 {
+    letter-spacing: 0;
+}
+.cards__item-header {
+    font-size: 2.5rem;
+    font-weight: 400;
+    letter-spacing: -0.18rem;
+    line-height: 1.2;
+    margin: 1.23vw 0 0vw 0vw;
+}
+.cards__item-description {
+    font-size: 1.2rem;
+    font-weight: 300;
+    letter-spacing: -0.15rem;
+    line-height: 1.25;
+    margin: 0.9vw 0 0;
+    padding-right: 6.2vw;;
+}
+.cards__item:nth-child(-n+2) {
+    min-height: 39.3vw;
+}
+.cards__item:nth-child(-n+2) .cards__item-info {
+    padding-top: 4.48vw;
+}
+.cards__item:nth-child(-n+2) .cards__item-content {
+    
+}
+.cards__item:nth-child(-n+2) .cards__item-header {
+    font-size: 3.3rem;
+    letter-spacing: -0.23rem;
+    padding-right: 126px;
+    height: 8.5rem;
+}
+.cards__item:nth-child(-n+2) .cards__item-btn {
+    top: 4.48vw;
+}
+.cards__item:nth-child(-n+2) .cards__item-amount {
+    bottom: 2.9vw;
+}
+
+/*-------------BUTTON BUY-------------------*/
+
+.cards__item-btn {
+    position: absolute;
+    top: 2.28vw;
+    right: 6.88vw;
+    height: 3rem;
+    width: 7.3rem;
+}
+
+.cards__item-btn::after {
+    width: 2.128rem;
+    height: 2.128rem;
+    background: linear-gradient(135deg, #3bb1e0, #3a85bd);
+    border-radius: 4px;
+    display: block;
+    content: " ";
+    position: absolute;
+    transform: rotate(45deg);
+    top: 0.45rem;
+    right: -1rem;
+    z-index: 200;
+}
+.btn.buy span::before {
+    display: inline-block;
+    content: url(../images/shopping-cart.svg);
+    width: 1.56rem;
+    position: absolute;
+    left: -1.8rem;
+    top: 0;
+    z-index: 300;
+}
+
+.cards__item-amount {
+    width: 6.6rem;
+    height: 2rem;
+    background: #f5c600;
+    text-align: center;
+    border-radius: 6px;
+    position: absolute;
+    bottom: 1.8vw;
+    right: 5.2vw;
+    font-weight: 700;
+    font-size: 1.6rem;
+    letter-spacing: 0.08rem;
+    color: #545628;
+}
+
+
+@media only screen and (max-width: 680px) {
+    .cards__item {
+        width: 100%;
+    }
+    .cards__item:first-child {
+        min-height: 39.3vw;
+    }
+    .cards__item:first-child .cards__item-info {
+        padding-top: 4.48vw;
+    }
+    .cards__item:first-child .cards__item-content {
+        
+    }
+    .cards__item:first-child .cards__item-header {
+        font-size: 3.3rem;
+        letter-spacing: -0.23rem;
+        padding-right: 126px;
+        height: 8.5rem;
+    }
+    .cards__item:first-child .cards__item-btn {
+        top: 4.4vw;
+    }
+}
+
+
+
+
+
+
+
+
+
 .size3 {
     width: 28%;
     min-height: 124px;
@@ -131,494 +273,6 @@ header {
     align-items: center;
     justify-content: center;
 }
-.card_content {
-    position: relative;
-    z-index: 80;
-}
-.size1 .card_content {
-    height: 417px;
-    margin: 60px 68px 38px 67px;
-}
-.size2 .card_content {
-    height: 200px;
-    margin: 33px 68px 24px 67px;
-}
-.child_card {
-    background-image: url("../images/child_card.jpg");
-}
-.child_card .card_name, .child_card.card::before {
-    background-color: #058cff;
-}
-.basic_sport {
-    background-image: url("../images/ball1.jpg");
-}
-.basic_sport .card_name,  .basic_sport.card::before {
-    background-color: #db28b3;
-}
-.full_immertion {
-    background-image: url("..//images/full_immertion.jpg");
-}
-.full_immertion .card_name,  .full_immertion.card::before {
-    background-color: #02828f;
-}
-.aqua_yoga {
-    background-image: url("..//images/yoga3_cut.png");
-}
-.aqua_yoga, .aqua_yoga h2 {
-    color: #5e6a75;
-}
-.aqua_yoga .card_name,  .aqua_yoga.card::before {
-    background-color: #ffffff;
-}
-
-/*info*/
-
-.info {
-    width: 360px;
-}
-.card_name {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.8;
-    letter-spacing: -1.8px;
-    word-spacing: 9px;
-    text-align: center;
-    height: 31px;    
-    border-radius: 4px;
-    display: inline-flex;
-}
-.card_name>span {
-    padding: 0 12px 0 12px;
-}
-.card_name .lett_spase0 {
-    letter-spacing: 0;
-}
-
-.size1 h2 {
-    font-size: 54px;
-    margin: 20px 0 21px -3px;
-    padding-right: 126px;
-    height: 130px;
-}
-.size2 h2 {
-    margin: 14px 0 0 -3px;
-    padding-right: 0;
-    height: 50px;
-}
-.card_description {
-    font-size: 19px;
-    font-weight: 300;
-    letter-spacing: -2.1px;
-    line-height: 1.25;
-    padding-right: 126px;
-}
-.size2 .card_description {
-    margin-top: 10px;
-    padding-right: 66px;
-}
-
-/*button BUY*/
-.all_cards .btn {
-    width: 119px;
-    top: 0px;
-    right: 21px;
-}
-.all_cards .btn::after {
-    width: 40px;
-    height: 40px;
-    background: linear-gradient(135deg, #489fdb, #5f84be);
-    border-radius: 6px;
-    box-sizing: border-box;
-    display: block;
-    content: " ";
-    position: absolute;
-    transform: rotate(45deg);
-    top: 6px;
-    right: -15px;
-    z-index: 150;
-}
-.all_cards .btn button::after {
-    width: 38px;
-    height: 38px;
-    background: linear-gradient(135deg, #3bb1e0, #3a85bd);
-    border-radius: 5px;
-    display: block;
-    content: " ";
-    position: absolute;
-    transform: rotate(45deg);
-    top: 6px;
-    right: -15px;
-    z-index: 200;
-}
-.all_cards .btn button span {
-    padding-left: 15px;
-}
-
-/*price*/
-.card_price {
-    width: 108px;
-    height: 32px;
-    background: #f5c600;
-    text-align: center;
-    border-radius: 4px;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    z-index: 50;
-}
-.card_price span {
-    font-weight: 700;
-    font-size: 26px;
-    letter-spacing: 1.8px;
-    color: #545628;
-}
-
-/*SECTION MOTIVATION*/
-
-.motivation {
-    height: 479px;
-    background-image: url("..//images/motivation_fon1.jpg");
-    background-size: cover;
-    padding-top: 65px;
-    position: relative;
-}           
-.motiv_info {
-    width: 680px;
-    margin: 0 auto;
-    text-align: center;
-    position: relative;
-}
-.motiv_info h2 {
-    margin: 23px 0;
-}
-.motiv_intro {
-    font-size: 29px;
-    letter-spacing: -3px;
-    margin: 30px 0 0;
-}
-.motiv_description {
-    font-size: 18px;
-    font-weight: 300;
-    letter-spacing: -1.3px;
-    line-height: 1.25;
-}
-.motivation .btn {
-    width: 190px;
-    bottom: -90px;
-    right: 244px;
-
-}
-.motivation .btn button span {
-    padding-left: 0px;
-}
-.motiv_switch {
-    position: absolute;
-    right: 58px;
-    top: 0;
-    height: 100%;
-}
-.switch_items_container {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-.switch_item {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    border: solid 3px #87c6dc;
-    margin-bottom: 25px;
-}
-.switch_item:last-child {
-    margin-bottom: 0px;
-}
-.switch_item:hover {
-    background-color: #f5c800;
-    border: solid 4px #f0f0f0;
-}
-.switch_item a {
-    display: block;
-    height: 100%;
-    width: 100%;
-}
-
-/*SECTION TIMETABLE */
-
-.timetable>h2 {
-    color: #99a0a8;  
-    text-align: center;  
-    margin: 52px 0 45px 0;
-}
-.timetable_for_card {
-    display: flex;
-    flex-wrap: nowrap;
-}
-.timetable_for_card h2 {
-    font-size: 13px;
-    margin: 10px 0px 0 5px;
-}
-.timetable_for_card .card {
-    margin-bottom: 1px;
-}
-.timetable .card_content {
-    margin: 0px 0px 0 50px;
-    width: 250px;
-}
-.timetable .card_name {
-    height: 28px;
-    border-radius: 4px;
-    text-align: center;
-}
-.timetable .card_name>span {
-    font-size: 13px;
-    padding: 3px 14px 0 15px;
-}
-.timetable .card_content h2 {
-    font-size: 24px;
-    padding: 3px 0px 0 9px;
-    letter-spacing: -1px;
-}
-
-.coach_time {
-    width: 72%;
-    border-top: solid 1px #e5e5e5;
-}
-.coach_time .time {
-    display: flex;   
-    flex-wrap: nowrap;
-}
-.coach_time .hour {
-    box-sizing: padding-box;
-    width: 7.7%;
-    border-right: solid 1px #e5e5e5;
-    border-top: solid 1px #f1f1f1;
-}
-.coach_time .hour {
-    text-align: center;
-    height: 60px;
-    background-color: #eeeeee;
-}
-.coach_time .coaches {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    background-image: url("../images/line_vert.svg");
-    background-position: -1px top ;
-    background-size: 7.7% auto;
-}
-.coaches .btn {
-    position: relative;
-    margin-top: 20px;
-}
-.coach_time .coaches .btn:last-child {
-    margin-bottom: 20px;
-}
-.coach_time .hour:first-child {
-    border-left: solid 1px #f1f1f1;
-}
-.coach_time .hour:last-child {
-    border-right: 0;
-}
-.coach_time .from, .coach_time .to {
-    color: #c6c6c6;
-}
-.coach_time .from {
-    font-size: 16px;
-    margin-bottom: 0px;
-}
-.coach_time .to {
-    font-size: 10px;
-    margin-top: 5px
-}
-.coach_timing {
-    height: 41px;
-    padding: 12px 0 0 18px;
-}
-.coach_timing span {
-    letter-spacing: 1.6px;
-}
-
-.linght_4_00 {
-    width: 282px;
-}
-.linght_5_00 {
-    width: 353px;
-}
-.linght_5_30 {
-    width: 390px;
-}
-.linght_6_00 {
-    width: 423px;
-}
-.linght_10_00 {
-    width: 707px;
-}
-
-.time_start_09_30 {
-    margin-left: 34px;
-}
-.time_start_10_00 {
-    margin-left: 71px;
-}
-.time_start_13_00 {
-    margin-left: 284px;
-}
-.time_start_14_00 {
-    margin-left: 355px;
-}
-.time_start_16_00 {
-    margin-left: 496px;
-}
-
-/*GIFT*/
-
-.gift {
-    background-color: #eeeeee;
-    display: flex;
-    flex-wrap: nowrap;
-    height: 438px;
-    padding-top: 1px;
-}
-.gift_info {
-    width: 54%;
-    position: relative;
-    margin-left: 90px;
-    margin-top: 40px;
-}
-.gift_info h2 {
-    color: #5e6a75;
-    letter-spacing: -4.6px;
-    margin: 70px 0 0;
-    position: relative;
-}
-.gift_description {
-    color: #5e6a75;
-    font-size: 18px;
-    font-weight: 300;
-    letter-spacing: -1.3px;
-    line-height: 1.25;
-    margin: 26px 60px 0 0;
-}
-.gift .btn {
-    width: 186px;
-    bottom: 121px;
-    right: 105px;
-}
-.gift .btn::after {
-    width: 40px;
-    height: 40px;
-    background: linear-gradient(135deg, #489fdb, #5f84be);
-    border-radius: 6px;
-    box-sizing: border-box;
-    display: block;
-    content: " ";
-    position: absolute;
-    transform: rotate(45deg);
-    top: 6px;
-    right: -15px;
-    z-index: 150;
-}
-.gift .btn button::after {
-    width: 38px;
-    height: 38px;
-    background: linear-gradient(135deg, #3bb1e0, #3a85bd);
-    border-radius: 5px;
-    display: block;
-    content: " ";
-    position: absolute;
-    transform: rotate(45deg);
-    top: 6px;
-    right: -15px;
-    z-index: 200;
-}
-.gift .btn button span {
-    padding-left: 15px;
-}
-
-.gift_img {
-    overflow: hidden;
-}
-.gift_img svg g path:first-child {
-    fill: #417575;
-}
-.gift_img svg g path:first-child:hover{
-    fill: #00aaaa;
-}
-.gift_img svg g path:nth-child(n+1) {
-    fill: #417575;
-}
-.gift_img svg g path:last-child:hover{
-    fill: #00aaaa;
-}
 
 
-/*FOOTER*/
 
-footer {
-    height: 145px;
-    background-color: #1c3144;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-}
-footer a {
-    color: #1d8299;
-    font-size: 12px;
-}
-footer p {
-    color: #546673;
-    font-size: 12px;
-    letter-spacing: -0.05em;
-    margin: 0;
-}
-.footer_info {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: left;
-    align-items: center;
-    margin-left: 122px;
-}
-.tel {
-    margin-right: 40px;
-}
-.tel i {
-    transform-origin: 50% 30% 0;
-    transform: rotate(115deg);
-}
-.tel a {
-    font-family: "Open Sans Condensed";
-    font-size: 31px;
-    letter-spacing: 2px;
-    text-decoration: none;
-    color: #fefefe;
-    padding-left: 19px;
-}
-.copywrite {
-    margin-right: 70px;
-}
-.social {
-    display: flex;
-    justify-content: space-around;
-    
-}
-.social div {
-    width: 40px;
-    height: 40px;
-    margin-right: 28px;
-    border-radius: 50%;
-    background-color: #30618a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.about_site {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-width: 12%;
-    text-align: right;
-    margin-right: 103px;
-}
-.about_site p  {
-    margin-bottom: 5px;
-}
