--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@ body {
 .dark_text {
     color: #5e6a75;
 }
+
 .btn {
     height: 100%;
     width: 100%;
@@ -24,9 +25,9 @@ body {
 }
 .btn span {
     font-family: "Open Sans", sans-serif;
-    font-size: 1.1rem;
+    font-size: 1.3vw;
     color: #ffffff;
-    margin-left: 1.5rem;
+    margin-left: 2vw;
     position:relative;
     z-index: 300;
 }
@@ -55,7 +56,7 @@ body {
 .header__menu {
     display: flex; /*for  а -- height=100%*/
     justify-content: space-between;
-    width: 52.94vw;
+    width: 51.74vw;
 }
 .header__menu-link {
     display: flex;
@@ -66,7 +67,7 @@ body {
     padding: 0;
     color: #aab1b5;
     font-family: "Open Sans", sans-serif;
-    font-size: 0.9rem;
+    font-size: 1.2vw;
     text-decoration: none;
     border-bottom: solid 4px rgba(252, 214, 51, 0);
 }
@@ -135,33 +136,33 @@ body {
     padding: 2.28vw 16.5vw 1.88vw 5.23vw;
 }
 .cards__item-name {
-    font-size: 1rem;
+    font-size: 1.3vw;
     font-weight: 700;
     line-height: 1.7;
-    letter-spacing: -0.02rem;
-    word-spacing: 0.7rem;
+    letter-spacing: -0.02vw;
+    word-spacing: 0.7vw;
     text-align: center;
-    padding: 0.1rem  0.8rem;
-    border-radius: 0.4rem;
+    padding: 0.1vw  0.8vw;
+    border-radius: 0.4vw;
     display: inline-flex;
 }
 .cards__item-name .lett_spase0 {
     letter-spacing: 0;
 }
 .cards__item-header {
-    font-size: 2.5rem;
+    font-size: 3.1vw;
     font-weight: 400;
-    letter-spacing: -0.18rem;
+    letter-spacing: -0.21vw;
     line-height: 1.2;
     margin: 1.23vw 0 0vw 0vw;
 }
 .cards__item-description {
-    font-size: 1.2rem;
+    font-size: 1.3vw;
     font-weight: 300;
-    letter-spacing: -0.15rem;
-    line-height: 1.25;
-    margin: 0.9vw 0 0;
-    padding-right: 6.2vw;;
+    letter-spacing: -0.08vw;
+    line-height: 1.4;
+    margin: 1vw 0 0;
+    padding-right: 6.2vw;
 }
 .cards__item:nth-child(-n+2) {
     min-height: 39.3vw;
@@ -173,10 +174,10 @@ body {
     
 }
 .cards__item:nth-child(-n+2) .cards__item-header {
-    font-size: 3.3rem;
-    letter-spacing: -0.23rem;
-    padding-right: 126px;
-    height: 8.5rem;
+    font-size: 4.1vw;
+    letter-spacing: -0.23vw;
+    padding-right: 8.6vw;
+    height: 10.8vw;
 }
 .cards__item:nth-child(-n+2) .cards__item-btn {
     top: 4.48vw;
@@ -191,36 +192,36 @@ body {
     position: absolute;
     top: 2.28vw;
     right: 6.88vw;
-    height: 3rem;
-    width: 7.3rem;
+    height: 3.7vw;
+    width: 9.2vw;
 }
 
 .cards__item-btn::after {
-    width: 2.128rem;
-    height: 2.128rem;
+    width: 2.62vw;
+    height: 2.62vw;
     background: linear-gradient(135deg, #3bb1e0, #3a85bd);
     border-radius: 4px;
     display: block;
     content: " ";
     position: absolute;
     transform: rotate(45deg);
-    top: 0.45rem;
-    right: -1rem;
+    top: 0.55vw;
+    right: -1.31vw;
     z-index: 200;
 }
 .btn.buy span::before {
     display: inline-block;
     content: url(../images/shopping-cart.svg);
-    width: 1.56rem;
+    width: 1.56vw;
     position: absolute;
-    left: -1.8rem;
+    left: -1.8vw;
     top: 0;
     z-index: 300;
 }
 
 .cards__item-amount {
-    width: 6.6rem;
-    height: 2rem;
+    width: 8.2vw;
+    height: 2.6vw;
     background: #f5c600;
     text-align: center;
     border-radius: 6px;
@@ -228,8 +229,8 @@ body {
     bottom: 1.8vw;
     right: 5.2vw;
     font-weight: 700;
-    font-size: 1.6rem;
-    letter-spacing: 0.08rem;
+    font-size: 2vw;
+    letter-spacing: 0.1vw;
     color: #545628;
 }
 
