--- a/styles/main.css
+++ b/styles/main.css
@@ -164,27 +164,6 @@ body {
     margin: 1vw 0 0;
     padding-right: 6.2vw;
 }
-.cards__item:nth-child(-n+2) {
-    min-height: 39.3vw;
-}
-.cards__item:nth-child(-n+2) .cards__item-info {
-    padding-top: 4.48vw;
-}
-.cards__item:nth-child(-n+2) .cards__item-content {
-    
-}
-.cards__item:nth-child(-n+2) .cards__item-header {
-    font-size: 4.1vw;
-    letter-spacing: -0.23vw;
-    padding-right: 8.6vw;
-    height: 10.8vw;
-}
-.cards__item:nth-child(-n+2) .cards__item-btn {
-    top: 4.48vw;
-}
-.cards__item:nth-child(-n+2) .cards__item-amount {
-    bottom: 2.9vw;
-}
 
 /*-------------BUTTON BUY-------------------*/
 
@@ -234,6 +213,26 @@ body {
     color: #545628;
 }
 
+@media only screen and (min-width: 681px) {
+    .cards__item:nth-child(-n+2) {
+        min-height: 39.3vw;
+    }
+    .cards__item:nth-child(-n+2) .cards__item-info {
+        padding-top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+2) .cards__item-header {
+        font-size: 4.1vw;
+        letter-spacing: -0.23vw;
+        padding-right: 8.6vw;
+        height: 10.8vw;
+    }
+    .cards__item:nth-child(-n+2) .cards__item-btn {
+        top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+2) .cards__item-amount {
+        bottom: 2.9vw;
+    }
+}
 
 @media only screen and (max-width: 680px) {
     .cards__item {
@@ -245,19 +244,90 @@ body {
     .cards__item:first-child .cards__item-info {
         padding-top: 4.48vw;
     }
-    .cards__item:first-child .cards__item-content {
-        
-    }
     .cards__item:first-child .cards__item-header {
-        font-size: 3.3rem;
-        letter-spacing: -0.23rem;
-        padding-right: 126px;
-        height: 8.5rem;
+        font-size: 4.1vw;
+        letter-spacing: -0.23vw;
+        padding-right: 8.6vw;
+        height: 10.8vw;
     }
     .cards__item:first-child .cards__item-btn {
-        top: 4.4vw;
+        top: 4.48vw;
+    }
+    .cards__item:first-child .cards__item-amount {
+        bottom: 2.9vw;
     }
 }
+/*@media only screen and (min-width: 1401px) {
+    .cards__item {
+        width: 33.333333%;
+    }
+    .cards__item:nth-child(-n+3) {
+        min-height: 39.3vw;
+    }
+    .cards__item:nth-child(-n+3) .cards__item-info {
+        padding-top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+3) .cards__item-header {
+        font-size: 4.1vw;
+        letter-spacing: -0.23vw;
+        padding-right: 8.6vw;
+        height: 10.8vw;
+    }
+    .cards__item:nth-child(-n+3) .cards__item-btn {
+        top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+3) .cards__item-amount {
+        bottom: 2.9vw;
+    }
+}*/
+
+/*@media only screen and (min-width: 1800px) {
+    .cards__item {
+        width: 25%;
+    }
+    .cards__item:nth-child(-n+4) {
+        min-height: 39.3vw;
+    }
+    .cards__item:nth-child(-n+4) .cards__item-info {
+        padding-top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+4) .cards__item-header {
+        font-size: 4.1vw;
+        letter-spacing: -0.23vw;
+        padding-right: 8.6vw;
+        height: 10.8vw;
+    }
+    .cards__item:nth-child(-n+4) .cards__item-btn {
+        top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+4) .cards__item-amount {
+        bottom: 2.9vw;
+    }
+}*/
+
+/*@media only screen and (min-width: 2200px) {
+    .cards__item {
+        width: 16.6666667%;
+    }
+    .cards__item:nth-child(-n+6) {
+        min-height: 39.3vw;
+    }
+    .cards__item:nth-child(-n+6) .cards__item-info {
+        padding-top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+6) .cards__item-header {
+        font-size: 4.1vw;
+        letter-spacing: -0.23vw;
+        padding-right: 8.6vw;
+        height: 10.8vw;
+    }
+    .cards__item:nth-child(-n+6) .cards__item-btn {
+        top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+6) .cards__item-amount {
+        bottom: 2.9vw;
+    }
+}*/
 
 
 
